# zoho-desk-ticket-modifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  comment_templates.yaml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
src/core/: config.py  exceptions.py  logging_config.py  middleware.py  template_engine.py  zoho_client.py
src/routers/: comments.py  tickets.py
src/schemas/: tickets.py
