[project]
name = "microservice-zoho-desk-ticket-modifications"
version = "0.3.0"
description = "FastAPI service to update Zoho Desk tickets and add templated private comments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2,<3",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0",
    "prometheus-fastapi-instrumentator>=7.0",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    # Explicit auto-instrumentors — uv venvs ship without pip, so
    # `opentelemetry-bootstrap -a install` can't install them at build
    # time. Listing them here gets them into uv.lock instead.
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-logging>=0.48b0",
]
